# project-cpp-word-indexing

./: CMakeLists.txt  README.md
Architecture/: class-diagram.dia
app/: main.cpp
include/WordIndexing/: SearchThread.h  SyncQueue.h  WorkerThread.h
src/: CMakeLists.txt  SearchThread.cpp  SyncQueue.cpp  WorkerThread.cpp
test-text-files/: file1.txt  file2.txt
